// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots works with four students 1`] = `
<div
  className="Card StudentVoiceCard"
  style={
    Object {
      "border": "1px solid #ccc",
      "borderRadius": 3,
      "padding": 10,
    }
  }
>
  <div>
    <span
      style={
        Object {
          "position": "relative",
          "top": 1,
        }
      }
    >
      💬
    </span>
     
    <a
      href="/students/7"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Darth
       
      Tater
    </a>
    , 
    <a
      href="/students/6"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Kylo
       
      Ren
    </a>
     and 
    <a
      href="#"
      onClick={[Function]}
    >
      2 more students
    </a>
     shared new student voice surveys.
  </div>
</div>
`;

exports[`snapshots works with one student 1`] = `
<div
  className="Card StudentVoiceCard"
  style={
    Object {
      "border": "1px solid #ccc",
      "borderRadius": 3,
      "padding": 10,
    }
  }
>
  <div>
    <span
      style={
        Object {
          "position": "relative",
          "top": 1,
        }
      }
    >
      💬
    </span>
     
    <a
      href="/students/4"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Luke
       
      Skywalker
    </a>
     shared a new student voice survey.
  </div>
</div>
`;

exports[`snapshots works with three students 1`] = `
<div
  className="Card StudentVoiceCard"
  style={
    Object {
      "border": "1px solid #ccc",
      "borderRadius": 3,
      "padding": 10,
    }
  }
>
  <div>
    <span
      style={
        Object {
          "position": "relative",
          "top": 1,
        }
      }
    >
      💬
    </span>
     
    <a
      href="/students/4"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Luke
       
      Skywalker
    </a>
    , 
    <a
      href="/students/5"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Mari
       
      Kenobi
    </a>
     and 
    <a
      href="/students/6"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Kylo
       
      Ren
    </a>
     shared new student voice surveys.
  </div>
</div>
`;

exports[`snapshots works with two students 1`] = `
<div
  className="Card StudentVoiceCard"
  style={
    Object {
      "border": "1px solid #ccc",
      "borderRadius": 3,
      "padding": 10,
    }
  }
>
  <div>
    <span
      style={
        Object {
          "position": "relative",
          "top": 1,
        }
      }
    >
      💬
    </span>
     
    <a
      href="/students/4"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Luke
       
      Skywalker
    </a>
     and 
    <a
      href="/students/5"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Mari
       
      Kenobi
    </a>
     shared new student voice surveys.
  </div>
</div>
`;
